<!--
  ~ Copyright 2018, Team 26 CMPUT 301. University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under the terms and coditions fo the Code of Student Behaviour at the University of Alberta.
  -->

<resources>
    <string name="app_name">TaskIt</string>
    <string name="user_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="user_username">Username</string>
    <string name="create_account">Create/Update</string>
    <string name="update_account">Update Account</string>
    <string name="edit_user">Edit</string>
    <string name="new_task">New Task</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="create_task">Create Task</string>
    <string name="add_photos">Add Photos</string>
    <string name="view_photos">View Photos</string>
    <string name="add_location">Add Location</string>
    <string name="search_hint">Search Tasks</string>
    <string-array name="array_country">
        <item>China</item>
        <item>America</item>
        <item>Canada</item>
    </string-array>
</resources>
